js262/test/language/literals/string/S7.8.4_A1.1_T1.js


/*---
info: "StringLiteral :: \"DoubleStringCharacters_opt\""
es5id: 7.8.4_A1.1_T1
description: >
    DoubleStringCharacter :: SourceCharacter but not double-quote " or
    LineTerminator
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();


"""
